work1/my-http-business-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-http-business-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-http-business
  template:
    metadata:
      labels:
        app: my-http-business
    spec:
      containers:
        - name: my-http-business
          image: superpig2046/my-http:1.2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 300Mi
            requests:
              memory: 100Mi
