work1/my-http-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-http-server
  labels:
    app: my-http-server
spec:
  containers:
    - name: my-http-server
      image: superpig2046/my-http:1.1
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8888
        initialDelaySeconds: 5
        timeoutSeconds: 1
      resources:
        limits:
          memory: 500Mi
        requests:
          memory: 100Mi
