work1/my-http-business-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 8888
  selector:
    app: my-http-business
