work1/my-http-sale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sale-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: my-http-sale
